Fixed page header spacing

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -685,7 +685,7 @@ hr {
   outline: none;
   height: 3px;
   background: transparent url("../images/hr.gif") center center repeat-x;
-  margin: 0 0 20px;
+  margin: 12px 0 7px;
 }
 
 dt {
@@ -795,8 +795,8 @@ section #title {
 section #title h1 {
   font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
-  font-size: 40px;
-  text-align: center;
+  font-size: 32px;
+  text-align: left;
   line-height: 36px;
 }
 section #title p {
